--- a/templates/index.html
+++ b/templates/index.html
@@ -9,13 +9,13 @@
     <div class="row">
         <div class="col-md-12">
             <div class="center">
-                <h1>UC Grants</h1>
-                <h3>Welcome to nova.</h3>
-                <img src="{{ url_for('static', filename='images/uc_logo.jpg') }}">
+                <h1>Welcome to nova.</h1>
+                <h5>UC Financial Transparency</h5>
+                <img src="{{ url_for('static', filename='images/uc_logo.jpg') }}" style="padding-top:2em;">
             </div>
         </div>
     </div>
-    
+
     <div class="navbar navbar-fixed-bottom center" style="color:#b1b1b1;"><i>Brought to you by Nicholas Boucher '19</i></div>
 
 {% endblock %}
