--- a/templates/expenses.html
+++ b/templates/expenses.html
@@ -34,6 +34,9 @@
                                             <th>Amount Budgeted</th>
                                             <th>Amount Spent</th>
                                             <th>Legislation</th>
+                                            {% if current_user.treasurer %}
+                                              <th>Edit</th>
+                                            {% endif %}
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -48,6 +51,9 @@
                                                         <a href="{{ url_for('expense_legislation', id=expense.id) }}" class="btn btn-default">Legislation</a>
                                                     {% endif %}
                                                 </td>
+                                                {% if current_user.treasurer %}
+                                                  <td><a href="{{ url_for('expense_edit', id=expense.id) }}" class="btn btn-default">Edit</a></td>
+                                                {% endif %}
                                             </tr>
                                         {% endfor %}
                                     </tbody>
