Changed treasurer name on all emails (Nicholas->Nadine)

--- a/templates/email/check.html
+++ b/templates/email/check.html
@@ -27,6 +27,6 @@
     
     <p>Thanks for applying for a UC Grant; we hope to see you again in the future!</p>
     <p>Best,
-    <br>Nicholas Boucher
+    <br>Nadine Khoury
     <br><i>Treasurer, Undergraduate Council</i></p>
 </div>
