--- a/templates/email/grant_denied.html
+++ b/templates/email/grant_denied.html
@@ -10,6 +10,6 @@
         future projects in accordance with our <a href="https://uc.fas.harvard.edu/grants/">Policy Guide</a>. Thanks for applying,
         and please don't heistate to reach out with any questions.</p>
     <p>Best,
-    <br>Nicholas Boucher
+    <br>Nadine Khoury
     <br><i>Treasurer, Undergraduate Council</i></p>
 </div>
