--- a/templates/email/owed_money_notice.html
+++ b/templates/email/owed_money_notice.html
@@ -19,6 +19,6 @@
         In order to avoid going into bad standing with the UC and losing eligibility for future grants, please respond to
         this email to coordinate a time to process the reimbursement.</p>
     <p>Best,
-    <br>Nicholas Boucher
+    <br>Nadine Khoury
     <br><i>Treasurer, Undergraduate Council</i></p>
 </div>
