--- a/templates/email/receipts_reviewed.html
+++ b/templates/email/receipts_reviewed.html
@@ -36,6 +36,6 @@
     {% endif %}
 
     <p>Best,
-    <br>Nicholas Boucher
+    <br>Nadine Khoury
     <br><i>Treasurer, Undergraduate Council</i></p>
 </div>
