--- a/templates/email/interview_complete.html
+++ b/templates/email/interview_complete.html
@@ -10,6 +10,6 @@
         votes on your grant.</p>
     <p>As always, you can track the status of your grant <a href="{{ url_for('grant', grant_id=grant.grant_id, key=grant.key, _external=True)}}">here</a>.</p>
     <p>Best,
-    <br>Nicholas Boucher
+    <br>Nadine Khoury
     <br><i>Treasurer, Undergraduate Council</i></p>
 </div>
