--- a/templates/email/interview_scheduled.html
+++ b/templates/email/interview_scheduled.html
@@ -21,6 +21,6 @@
     </p>
     <p>As always, you can <a href="{{ url_for('grant', grant_id=grant.grant_id, key=grant.key, _external=True)}}">track the status of your grant on our portal</a>.</p>
     <p>Best,
-    <br>Nicholas Boucher
+    <br>Nadine Khoury
     <br><i>Treasurer, Undergraduate Council</i></p>
 </div>
