--- a/templates/email/receipts_not_submitted.html
+++ b/templates/email/receipts_not_submitted.html
@@ -27,6 +27,6 @@
 
     {% endif %}
     <p>Best,
-    <br>Nicholas Boucher
+    <br>Nadine Khoury
     <br><i>Treasurer, Undergraduate Council</i></p>
 </div>
