--- a/templates/email/direct_deposit.html
+++ b/templates/email/direct_deposit.html
@@ -25,6 +25,6 @@
 
     <p>Thanks for applying for a UC Grant; we hope to see you again in the future!</p>
     <p>Best,
-    <br>Nadine Khoury
+    <br>{{ treasurer_name }}
     <br><i>Treasurer, Undergraduate Council</i></p>
 </div>
