--- a/templates/email/grant_denied.html
+++ b/templates/email/grant_denied.html
@@ -5,11 +5,11 @@
 
 <div style="text-align:left;">
     <p>Dear {{ grant.contact_first_name }} {{ grant.contact_last_name }},</p>
-    <p>Unfortunately, your grant application for <i>{{ grant.project }}</i> has been denied for funding by majority vote of the 
+    <p>Unfortunately, your grant application for <i>{{ grant.project }}</i> has been denied for funding by majority vote of the
         Undergraduate Council. We highly encourage you to apply for other grants in the future -- we would love to fund any of your
         future projects in accordance with our <a href="https://uc.fas.harvard.edu/grants/">Policy Guide</a>. Thanks for applying,
         and please don't heistate to reach out with any questions.</p>
     <p>Best,
-    <br>Nadine Khoury
+    <br>{{ treasurer_name }}
     <br><i>Treasurer, Undergraduate Council</i></p>
 </div>
