--- a/templates/email/grant_passed.html
+++ b/templates/email/grant_passed.html
@@ -15,6 +15,6 @@
 
     <p>Please submit your receipts as soon as possible. You view what you were allocated funds for and submit your receipts via your <a href="{{ url_for('grant', grant_id=grant.grant_id, key=grant.key, _external=True)}}">grant status page</a>.</p>
     <p>Best,
-    <br>Nadine Khoury
+    <br>{{ treasurer_name }}
     <br><i>Treasurer, Undergraduate Council</i></p>
 </div>
