--- a/templates/email/grant_submit.html
+++ b/templates/email/grant_submit.html
@@ -11,6 +11,6 @@
         {% endif -%}.</p>
     <p>You can track the status of your grant <a href="{{ url_for('grant', grant_id=grant.grant_id, key=grant.key, _external=True) }}">here</a>.</p>
     <p>Best,
-    <br>Nadine Khoury
+    <br>{{ treasurer_name }}
     <br><i>Treasurer, Undergraduate Council</i></p>
 </div>
