--- a/templates/email/receipts_submitted.html
+++ b/templates/email/receipts_submitted.html
@@ -9,6 +9,6 @@
         do so through your <a href="{{ url_for('grant', grant_id=grant.grant_id, key=grant.key, _external=True)}}">grant status portal</a>.</p>
     <p>The treasurer will review your receipts within a week, after which your funds will be transferred.</p>
     <p>Best,
-    <br>Nadine Khoury
+    <br>{{ treasurer_name }}
     <br><i>Treasurer, Undergraduate Council</i></p>
 </div>
