--- a/templates/email/receipts_reviewed.html
+++ b/templates/email/receipts_reviewed.html
@@ -36,6 +36,6 @@
     {% endif %}
 
     <p>Best,
-    <br>Nadine Khoury
+    <br>{{ treasurer_name }}
     <br><i>Treasurer, Undergraduate Council</i></p>
 </div>
