--- a/templates/email/reimbursement_complete.html
+++ b/templates/email/reimbursement_complete.html
@@ -13,6 +13,6 @@
     {% endif %}
     <p>We hope to see you again soon with future grants!</p>
     <p>Best,
-    <br>Nadine Khoury
+    <br>{{ treasurer_name }}
     <br><i>Treasurer, Undergraduate Council</i></p>
 </div>
