--- a/templates/email/submit_receipts.html
+++ b/templates/email/submit_receipts.html
@@ -15,6 +15,6 @@
         {% endif %}
         Failure to submit receipts by that time could make you ineligible for future grants.</p>
     <p>Best,
-    <br>Nadine Khoury
+    <br>{{ treasurer_name }}
     <br><i>Treasurer, Undergraduate Council</i></p>
 </div>
